--- a/style.css
+++ b/style.css
@@ -3,6 +3,52 @@ body{
     margin: 0;
     box-sizing: border-box;
 }
+#header-img{
+    position:absolute;
+    left:20px;
+    top:4px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    
+  }
+  .title{
+    position:absolute;
+    left:90px;
+    top:3px;
+    color: rgb(143, 207, 143);
+    font-size: 20px;
+    font-family: 'Festive', cursive;;
+  }
+  #nav-bar{
+    float: right;
+    overflow: hidden;
+  
+  }
+  #nav-bar a {
+    display: inline-block;
+    margin: -3px;
+    color: rgb(143, 207, 143);
+    font-weight: 900;
+    text-align: center;
+    padding: 16px 20px;
+    text-decoration: none;
+    font-size: 15px;
+  
+  }
+  #nav-link{
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    font-family: SansSerif;
+    color: red;
+    font-size: 21px;
+    padding-bottom: 50px;
+    width: 509px;
+    height: 200px;
+    line-height: 35px;
+  
+  }
 span{
     color: blueviolet;
 }
@@ -14,8 +60,10 @@ h2{
 }
 
 .topSection{
+
     display: flex;
     margin-bottom: 80px;
+    margin-top: 30px;
 }
 .intro{
     width: 40%;
@@ -64,7 +112,7 @@ p{
 .foodPic{
     width: 22em;
     height: 22em;
-    border-radius: 5px;
+    border-radius: 15px;
 
 }
 .contactLink{
@@ -112,9 +160,50 @@ p{
     margin-left: 15px;
     align-items: center;
     border-left: honeydew;
-    padding: 25px;
-    
+    padding: 20px;
+    border-left: 3px solid rgb(228, 159, 228);
+    border-radius: 15px;
+    box-shadow: 3px 3px 5px rgb(228, 159, 228);
+}
+.topDish p {
+    font-size: 16px;
 }
 .listDish{
     text-align: center;
+}
+.botsec{
+    margin-bottom: 100px;
+    
+}
+footer{
+    text-align: center;
+    position: relative;
+    bottom: 0%;
+
+}
+footer p {
+    text-align: center;
+}
+.socialMedia{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(247, 146, 109);
+    margin: 20px 50px 20px;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px rgb(240, 151, 100)
+}
+.sMember{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin: 10px;
+    padding: 5px;
+
+}
+.member{
+    font-size: 30px;
+    color: white;
 }
