--- a/style.css
+++ b/style.css
@@ -53,9 +53,12 @@ span{
 h1{
     font-size: 55px;
 }
-h2{
+h2, h4, h6 {
     color: purple;
+    margin: 0;
+    padding: 5px;
 }
+
 
 .topSection{
 
@@ -175,22 +178,17 @@ p{
 }
 footer{
     text-align: center;
-    position: relative;
-    bottom: 0%;
+}
 
-}
-footer p {
-    text-align: center;
-}
 .socialMedia{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(247, 146, 109);
-    margin: 20px 50px 20px;
-    padding: 10px;
+    background-color: rgba(119, 69, 184, 0.822);
+    margin: 10px 50px 10px;
+    padding: 2px;
     border-radius: 10px;
-    box-shadow: 5px 5px 10px rgb(240, 151, 100)
+    box-shadow: 5px 5px 10px rgba(119, 69, 184, 0.822);
 }
 .sMember{
     display: flex;
@@ -203,5 +201,9 @@ footer p {
 }
 .member{
     font-size: 30px;
-    color: white;
+    color: gainsboro;
+}
+.icon{
+    padding-left: 5px;
+    color: blanchedalmond;
 }
